Fix: Overflow Fail.

--- a/styles/output.css
+++ b/styles/output.css
@@ -755,6 +755,10 @@ video {
   margin-bottom: 5rem;
 }
 
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
 .mb-5 {
   margin-bottom: 1.25rem;
 }
@@ -773,10 +777,6 @@ video {
 
 .mt-5 {
   margin-top: 1.25rem;
-}
-
-.mb-4 {
-  margin-bottom: 1rem;
 }
 
 .box-border {
@@ -892,6 +892,22 @@ video {
 
 .h-full {
   height: 100%;
+}
+
+.max-h-96 {
+  max-height: 24rem;
+}
+
+.max-h-80 {
+  max-height: 20rem;
+}
+
+.max-h-2 {
+  max-height: 0.5rem;
+}
+
+.max-h-24 {
+  max-height: 6rem;
 }
 
 .w-28 {
